Finalización sem12(reportes jasper)

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -43,6 +43,7 @@ plantilla.suTienda=Su tienda en l\u00ednea
 plantilla.troles=Roles
 plantilla.tusuario=Usuario
 plantilla.usuarios=Usuarios
+plantilla.reportes=Reportes
 producto.activo=Activo
 producto.agregar=Agregar Producto
 producto.categoria=Categor\u00eda
