--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -42,6 +42,7 @@ plantilla.suTienda=Your online store
 plantilla.troles=roles
 plantilla.tusuario=User
 plantilla.usuarios=Users
+plantilla.reportes=Reports
 producto.activo=Active
 producto.agregar=Add Product
 producto.categoria=Category
